# multimodal-instruction-driving

./: README.md  pyproject.toml
scripts/: augment_hazard_score.py  build_nuscenes_subset.py  compare_runs.py  download_instructions.py  evaluate.py  inspect_instructions.py  make_toy_dataset.py  merge_instructions.py  predict.py  train.py  validate_submission.py
